refactoring, exception handler,validators
