# src/main/resources/static/api.yaml
@@ -16,10 +16,11 @@ paths:
       summary: List all drones
       operationId: listDrones
       parameters:
-        - name: status #checking available drones for loading;
+        - name: state #checking available drones for loading;
           in: query
           schema:
             type: string
+            enum: ["IDLE", "LOADING", "LOADED", "DELIVERING", "DELIVERED", "RETURNING"]
             description: status
       tags:
         - drones
@@ -88,7 +89,7 @@ paths:
                 $ref: '#/components/schemas/Medications'
         '404':
           description: A drone with the specified ID was not found.
-  /drones/{droneId}/batery-level:
+  /drones/{droneId}/battery:
     get: #- check drone battery level for a given drone;
       summary: check drone battery level for a given drone;
       operationId: getDroneBateryLevelById
@@ -97,18 +98,20 @@ paths:
           in: path
           required: true
           style: simple
-          explode: false
           schema:
             type: integer
             description: droneId
       responses:
         '200':
-          description: OK
+          description: A User object
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
-                example: 20%
+                type: object
+                properties:
+                  battery:
+                    type: integer
+                    description: The battery level.
         '404':
           description: A drone with the specified ID was not found.
   /drones/{droneId}/load/{loadId}:
@@ -214,6 +217,9 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Load'
+            examples:
+              loadsample:
+                $ref: '#/components/examples/loadsample'
       responses:
         '200':
           description: OK
@@ -223,22 +229,6 @@ paths:
                 $ref: '#/components/schemas/Load'
 components:
   schemas:
-    Model:
-      type: string
-      enum:
-        - Lightweight
-        - Middleweight
-        - Cruiserweight
-        - Heavyweight
-    State:
-      type: string
-      enum:
-        - IDLE
-        - LOADING
-        - LOADED
-        - DELIVERING
-        - DELIVERED
-        - RETURNING
     Drone:
       type: object
       required:
@@ -262,6 +252,12 @@ components:
         state:
           type: string
           enum: ["IDLE", "LOADING", "LOADED", "DELIVERING", "DELIVERED", "RETURNING"]
+      example:
+        "serialNumber": "string"
+        "model": "LIGHTWEIGHT"
+        "weightLimit": 500
+        "batteryCapacity": 100
+        "state": "IDLE"
     Drones:
       type: array
       items:
@@ -273,7 +269,7 @@ components:
           type: integer
         name:
           type: string
-          pattern: '^[[:alnum:]_-]+$'
+          pattern: '^[A-Z_0-9\-a-z]+$'
         code:
           type: string
           pattern: '^[A-Z_0-9\-]+$'
@@ -282,17 +278,25 @@ components:
           maximum: 500
         image:
           type: string
+      example:
+        name: Medication-2
+        code: CODE-4
+        weight: 300
+        image: cusom.png
     Medications:
       type: array
       items:
         $ref: '#/components/schemas/Medication'
     Load:
       type: object
+      required:
+        - medications_id
       properties:
         id:
           type: integer
         drone_id:
           type: integer
+
         medications_id:
           type: array
           items:
@@ -322,3 +326,11 @@ components:
           format: int32
         message:
           type: string
+  examples:
+    loadsample:
+      value:
+        medications_id:
+        - 1
+        - 2
+
+
